Fix TODOs, update log dir handling based on jetty project's feedback, add details on why we need violations